--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/plugins/global/plugins.bundle.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.bundle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
