feat: custom axios instance, fetch to fake server

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   <title>React App</title>
 </head>
 
-<body>
+<body style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
