feat: added bs react toggle button

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/plugins/global/plugins.bundle.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/plugins/custom/bootstrap-switch/css/bootstrap4-toggle.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.bundle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   
@@ -48,6 +49,7 @@
   <script src="%PUBLIC_URL%/assets/plugins/global/plugins.bundle.js"></script>
   <script src="%PUBLIC_URL%/assets/js/scripts.bundle.js"></script>
   <script src="%PUBLIC_URL%/assets/js/custom/widgets.js"></script>
+  <script src="%PUBLIC_URL%/assets/plugins/custom/bootstrap-switch/js/bootstrap4-toggle.js"></script>
 </body>
 
 </html>
